avoid grid left / right overlay when containers too small regarding window size

--- a/css/styles.css
+++ b/css/styles.css
@@ -1423,6 +1423,7 @@ a:hover {
 .gridh100p {
     display: grid;
     height: 100%;
+    overflow: clip;
 }
 
 .invert {
